--- a/angular.json
+++ b/angular.json
@@ -6,11 +6,11 @@
     "ToDos": {
       "projectType": "application",
       "i18n": {
-              "sourceLocale": "en",
-              "locales": {
-                "ar": "src/app/Localization/messages.ar.xlf"
-              }
-            },
+        "sourceLocale": "en",
+        "locales": {
+          "ar": "src/app/Localization/messages.ar.xlf"
+        }
+      },
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
@@ -35,23 +35,18 @@
             "browser": "src/main.ts",
             "localize": true,
             "i18nMissingTranslation": "ignore",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
-            ]
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
             "production": {
@@ -69,7 +64,7 @@
               ],
               "outputHashing": "all"
             },
-            "ar":{
+            "ar": {
               "localize": ["ar"]
             },
             "development": {
@@ -86,7 +81,7 @@
             "production": {
               "buildTarget": "ToDos:build:production"
             },
-            "ar":{
+            "ar": {
               "buildTarget": "ToDos:build:ar"
             },
             "development": {
@@ -104,19 +99,11 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         }
