--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
+    "primeng": "^17.18.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.2",
     "tslib": "^2.3.0",
