--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^17.3.0",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^12.0.0",
     "ngx-toastr": "^19.0.0",
     "primeng": "^17.18.4",
     "rxjs": "~7.8.0",
