--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,15 @@
 {
   "cSpell.words": [
     "getcontroler",
+    "Hager",
+    "Hanya",
     "iauthentication",
     "interceptores",
     "iresponse",
     "iuser",
+    "Laila",
     "recive",
+    "Samer",
     "Submited",
     "swal",
     "sweetalert",
