--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ngrx/store": "^18.0.1",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "lottie-web": "^5.12.2",
