--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
   "cSpell.words": [
+    "decreament",
     "getcontroler",
     "Hager",
     "Hanya",
     "iauthentication",
+    "ilogin",
+    "imedia",
+    "increament",
     "interceptores",
     "iresponse",
     "iuser",
@@ -14,6 +18,7 @@
     "swal",
     "sweetalert",
     "toastr",
+    "todos",
     "الالكتروني",
     "البريد",
     "الدخول",
