--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ngrx/effects": "^18.0.1",
+    "@ngrx/entity": "^18.0.1",
     "@ngrx/store": "^18.0.1",
+    "@ngrx/store-devtools": "^18.0.1",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "lottie-web": "^5.12.2",
